Let's take care of this spacing issue from so long ago!

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -151,6 +151,10 @@
     @media screen and (min-width: 37.5em) {
       font-size: 1.6em;
     }
+
+    &.margin-bottom-zero {
+      margin-bottom: 0.2rem;
+    }
   }
 
   h3 {
